--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html,.main{
     height: 100%;
     background-color: #ffe115;
     background: linear-gradient(to bottom right, #ffe115, #f9e56686  )
-    , url('../assets/img/emo5.png');
+    , url('../assets/img/background.jpg');
     background-position: center;
     display: block
 }
