--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html,.main{
     color: #292222;
 }
 .navigation > a:hover{
-    color: #4A8FE7;
+    color: #8b0000;
 }
 .emoji-devices{
     width: 50%;
