--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Imports */
-@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Gill Sans:300,400,500,700');
 
 *{ 
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Gill Sans', sans-serif;
 }
 html,.main{
     padding: 0;
