--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ html,.main{
     border-radius: 6px;
     width: 100%;
     font-weight: 500;
+    font-size: x-small;
 }
 .navigation:hover > a::before{
         content: '';
